--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ certifi==2019.11.28
 cycler==0.10.0
 kiwisolver==1.1.0
 matplotlib==3.1.3
-mkl-fft==1.0.15
+mkl-fft>=1.0.15
 mkl-random==1.1.0
 mkl-service==2.3.0
 numpy==1.18.1
