--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ cycler==0.10.0
 kiwisolver==1.1.0
 matplotlib==3.1.3
 numpy==1.18.1
+opencv-python==3.3.1
 pandas==1.0.2
 pyparsing==2.4.6
 python-dateutil==2.8.1
@@ -14,4 +15,3 @@ tornado==6.0.4
 openpyxl>=2.6.1
 scikit-image>=0.16.2
 xmltodict>=0.12.0
-openCV
