--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ certifi==2019.11.28
 cycler==0.10.0
 kiwisolver==1.1.0
 matplotlib==3.1.3
+natsort
 numpy==1.18.1
 opencv-python==3.3.1
 pandas==1.0.2
