--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ cycler==0.10.0
 matplotlib==3.1.3
 numpy==1.18.1
 opencv-python==3.4.2.17
+openpyxl>=2.6.1
 pandas==1.0.2
 pyparsing==2.4.6
 scikit-image>=0.16.2
