--- a/.github/workflows/continuous_integration.yml
+++ b/.github/workflows/continuous_integration.yml
@@ -23,7 +23,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install flake8
         pip install pytest
-        pip install testfixtures
+        pip install pytest-cov
         pip install -r requirements.txt
 
     - name: Lint with flake8
@@ -37,3 +37,11 @@ jobs:
     - name: Test with pytest
       run: |
         pytest -v
+        pytest --cov=./ --cov-report=xml
+    - name: Upload coverage to Codecov
+      uses: codecov/codecov-action@v1
+      with:
+        file: ./coverage.xml
+        flags: unittests
+        name: codecov-umbrella
+        fail_ci_if_error: true
