--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 certifi==2019.11.28
 cycler==0.10.0
 matplotlib==3.1.3
+natsort
 numpy==1.18.1
 opencv-python==3.4.2.17
 openpyxl>=2.6.1
@@ -9,4 +10,5 @@ pyparsing==2.4.6
 scikit-image>=0.16.2
 scipy==1.1.0
 tabulate==0.8.3
+xlrd >= 1.0.0
 xmltodict>=0.12.0
