--- a/.github/workflows/continuous_integration.yml
+++ b/.github/workflows/continuous_integration.yml
@@ -25,6 +25,7 @@ jobs:
         pip install pytest
         pip install pytest-cov
         pip install googledrivedownloader
+        pip install requests
         pip install -r requirements.txt
 
     - name: Lint with flake8
