--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ pandas==1.0.2
 pyparsing==2.4.6
 scikit-image>=0.16.2
 scipy==1.1.0
+seaborn>=0.10.1
 tabulate==0.8.3
 xlrd >= 1.0.0
 xmltodict>=0.12.0
