--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ natsort
 numpy==1.18.1
 opencv-python==3.4.2.17
 openpyxl>=2.6.1
-pandas==1.0.2
+pandas>=1.0.2
 pyparsing==2.4.6
 scikit-image>=0.16.2
 scipy==1.1.0
