--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ certifi==2019.11.28
 cycler==0.10.0
 matplotlib==3.1.3
 natsort
-numpy==1.18.1
+numpy>=1.18.1
 opencv-python==3.4.2.17
 openpyxl>=2.6.1
 pandas>=1.0.2
