--- a/requirements.txt
+++ b/requirements.txt
@@ -2,15 +2,25 @@ certifi==2019.11.28
 cycler==0.10.0
 matplotlib==3.1.3
 natsort
-numpy>=1.18.1
+numpy==1.18.1
 opencv-python==3.4.2.17
 openpyxl>=2.6.1
-pandas>=1.0.2
+pandas==1.0.2
 pyparsing==2.4.6
 scikit-image>=0.16.2
 scipy==1.1.0
 seaborn==0.10.1
 scikit-learn>=0.22.1
 tabulate==0.8.3
-xlrd >= 1.0.0
+xlrd == 1.2.0
 xmltodict>=0.12.0
+dask-image==0.6.0
+pywavelets>=1.1.1
+ipywidgets>=7.5.1
+tifffile>=2020.11.26
+zarr>=2.6.1
+natsort>=7.1.1
+scikit-image>=0.18.1
+click>=8.0.1
+pyyaml>=5.4.1
+napari>=0.4.10
