--- a/.codecov.yml
+++ b/.codecov.yml
@@ -15,3 +15,6 @@ comment:
   layout: "header, reach, diff, flags, files, footer"
   behavior: default
   require_changes: no
+
+  codecov:
+    token: de0cdd42-ce78-41bd-afd2-01228f709290
