--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,17 @@
-certifi==2019.11.28
-cycler==0.10.0
-matplotlib==3.1.3
+certifi
+cycler
+matplotlib
 natsort
 numpy>=1.18.1
-opencv-python==3.4.2.17
+opencv-python
 openpyxl>=2.6.1
 pandas>=1.0.2
-pyparsing==2.4.6
+pyparsing
 scikit-image>=0.16.2
-scipy==1.1.0
-seaborn==0.10.1
+scipy
+seaborn
 scikit-learn>=0.22.1
-tabulate==0.8.3
+tabulate
 xlrd >= 1.0.0
 xmltodict>=0.12.0
 xgboost
