--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,17 @@
-certifi
-cycler
-matplotlib
+certifi==2019.11.28
+cycler==0.10.0
+matplotlib==3.1.3
 natsort
 numpy>=1.18.1
 opencv-python==3.4.2.17
 openpyxl>=2.6.1
 pandas>=1.0.2
-pyparsing
+pyparsing==2.4.6
 scikit-image>=0.16.2
-scipy
-seaborn
+scipy==1.1.0
+seaborn==0.10.1
 scikit-learn>=0.22.1
-tabulate
+tabulate==0.8.3
 xlrd >= 1.0.0
 xmltodict>=0.12.0
 xgboost
